package com.flc.memberbooking.model;

public enum BookingStatus {
    BOOKED,
    CHANGED,
    CANCELLED,
    ATTENDED
}
