package com.flc.memberbooking.model;

public class ChangeRequest {
    private String newLessonId;

    public ChangeRequest() {}

    public String getNewLessonId() { return newLessonId; }
    public void setNewLessonId(String newLessonId) { this.newLessonId = newLessonId; }
}
